--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block content %}
-    <h2 class="mt-3 text-center">Youtube Video Downloader</h2>
+    <h2 class="mt-3 text-center">Youtube Video Downloader 2</h2>
     <div class="mt-2 text-center">
         Convert and download all YouTube videos to high quality .mp4 files, by just inputting the url.
     </div>
